<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.contactviewerhw.app.MainActivity"
    tools:ignore="MergeRootFrame">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:textSize="28sp"
                android:text="@string/contact_header"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/edit_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                />
            <ImageView
                android:id="@+id/contact_image"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="16dp"
                android:layout_margin="8dp"
                android:layout_below="@id/header"
                android:src="@drawable/contact"
                android:background="#00FFFF"
                />
            <ImageView
                android:id="@+id/call_button"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_toRightOf="@id/contact_image"
                android:layout_below="@id/header"
                android:layout_margin="8dp"
                android:layout_marginBottom="20dp"
                android:scaleType="center"
                android:src="@drawable/phone"
                android:onClick="launchPhone"
                />
            <ImageView
                android:id="@+id/msg_button"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_toRightOf="@id/call_button"
                android:layout_below="@id/header"
                android:layout_margin="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginBottom="20dp"
                android:scaleType="fitCenter"
                android:src="@drawable/msg"
                android:onClick="launchMessage"
                />
            <TextView
                android:id="@+id/alias_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/contact_image"
                android:layout_below="@id/call_button"
                android:layout_margin="16dp"
                android:text="@string/alias"
                android:textStyle="italic"
                />
            <TextView
                android:id="@+id/contact_name"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/contact_image"
                android:layout_alignBottom="@id/contact_image"
                android:layout_marginTop="16dp"
                android:layout_below="@id/alias_label"
                android:textSize="18sp"
                android:text="@string/contact"
                />
            <TextView
                style="@style/DetailsLabelsText"
                android:id="@+id/business_label_view"
                android:text="@string/business_label"
                android:layout_below="@id/contact_image"
                />
            <TextView
                style="@style/DetailsText"
                android:id="@+id/business_view"
                android:text="@string/business"
                android:layout_below="@id/business_label_view"
                />
            <TextView
                style="@style/DetailsLabelsText"
                android:id="@+id/phone_label_view"
                android:text="@string/phone_label"
                android:layout_below="@id/business_view"
                />
            <TextView
                style="@style/DetailsText"
                android:id="@+id/phone_view"
                android:text="@string/phone"
                android:layout_below="@id/phone_label_view"
                />
            <TextView
                style="@style/DetailsLabelsText"
                android:id="@+id/email_label_view"
                android:text="@string/email_label"
                android:layout_below="@id/phone_view"
                />
            <TextView
                style="@style/DetailsText"
                android:id="@+id/email_view"
                android:text="@string/email"
                android:layout_below="@id/email_label_view"
                />
            <TextView
                style="@style/DetailsLabelsText"
                android:id="@+id/address_label_view"
                android:text="@string/address_label"
                android:layout_below="@id/email_view"
                />
            <TextView
                style="@style/DetailsText"
                android:id="@+id/address_view"
                android:text="@string/address"
                android:layout_below="@id/address_label_view"
                />
            <TextView
                style="@style/DetailsLabelsText"
                android:id="@+id/url_label_view"
                android:text="@string/url_label"
                android:layout_below="@id/address_view"
                />
            <TextView
                style="@style/DetailsText"
                android:id="@+id/url_view"
                android:text="@string/url"
                android:layout_below="@id/url_label_view"
                />
            <TextView
                style="@style/DetailsLabelsText"
                android:id="@+id/im_label_view"
                android:text="@string/im_label"
                android:layout_below="@id/url_view"
                />
            <TextView
                style="@style/DetailsText"
                android:id="@+id/im_view"
                android:text="@string/im"
                android:layout_below="@id/im_label_view"
                />
            <TextView
                style="@style/DetailsLabelsText"
                android:id="@+id/dob_label_view"
                android:text="@string/dob_label"
                android:layout_below="@id/im_view"
                />
            <TextView
                style="@style/DetailsText"
                android:id="@+id/dob_view"
                android:text="@string/dob"
                android:layout_below="@id/dob_label_view"
                />
            <TextView
                style="@style/DetailsLabelsText"
                android:id="@+id/groups_label_view"
                android:text="@string/groups_label"
                android:layout_below="@id/dob_view"
                />
            <TextView
                style="@style/DetailsText"
                android:id="@+id/groups_view"
                android:text="@string/groups"
                android:layout_below="@id/groups_label_view"
                />
            <TextView
                style="@style/DetailsLabelsText"
                android:id="@+id/ringtone_label_view"
                android:text="@string/ringtone_label"
                android:layout_below="@id/groups_view"
                />
            <TextView
                style="@style/DetailsText"
                android:id="@+id/ringtone_view"
                android:text="@string/ringtone"
                android:layout_below="@id/ringtone_label_view"
                />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
