
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.contactviewerhw.app.EditContact"
    tools:ignore="MergeRootFrame">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- this button will most likely be replaced by ActionBar in this activity's Java class
     see scratch note
     -->
            <Button
                android:id="@+id/back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Back"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="8dp"
                />
            <Button
                android:id="@+id/del_button"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Delete"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:onClick="updateContact"
                android:layout_weight="1"
                />
            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Save"
                android:id="@+id/save_button"
                android:layout_toLeftOf="@id/del_button"
                android:onClick="deleteContact"
                />


            <TextView
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                />
            <ImageView
                android:id="@+id/contact_image"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="16dp"
                android:layout_margin="8dp"
                android:layout_below="@id/header"
                android:src="@drawable/contact"
                android:background="#00FFFF"
                />
            <TextView
                android:id="@+id/firstname_label_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/contact_image"
                android:layout_alignTop="@id/contact_image"
                android:text="@string/firstname_label"
                />
            <EditText
                android:id="@+id/firstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/firstname_label_view"
                android:layout_toRightOf="@id/contact_image"
                android:text="@string/firstname"
                android:hint="@string/firstname_hint"
                />
            <TextView
                android:id="@+id/lastname_label_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/contact_image"
                android:layout_below="@id/firstname"
                android:text="@string/lastname_label"
                android:layout_marginTop="10dp"
                />
            <EditText
                android:id="@+id/lastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/lastname_label_view"
                android:layout_toRightOf="@id/contact_image"
                android:text="@string/lastname"
                android:hint="@string/lastname_hint"
                />
            <TextView
                android:id="@+id/alias_label_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/contact_image"
                android:layout_below="@id/lastname"
                android:text="@string/alias_label"
                android:layout_marginTop="10dp"
                />
            <EditText
                android:id="@+id/alias"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/alias_label_view"
                android:layout_toRightOf="@id/contact_image"
                android:text="@string/alias"
                android:hint="@string/alias_hint"
                />

            <TextView
                style="@style/DetailsLabelsText"
                android:id="@+id/business_label_edit_view"
                android:layout_below="@id/contact_image"
                android:text="@string/business_label"
                />
            <EditText
                android:id="@+id/business_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/business_label_edit_view"
                android:layout_marginBottom="16dp"
                android:hint="@string/business_hint"
                />

            <TextView
                style="@style/DetailsLabelsText"
                android:id="@+id/phone_label_edit_view"
                android:layout_below="@id/business_edit"
                android:text="@string/phone_label"
                />

            <EditText
                android:id="@+id/phone_edit"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:layout_below="@id/phone_label_edit_view"
                android:layout_marginBottom="16dp"
                android:inputType="phone"
                android:gravity="center"
                android:hint="Ex: 555-555-5555"
                />
            <Spinner
                android:id="@+id/phone_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_toRightOf="@id/phone_edit"
                android:layout_below="@id/phone_label_edit_view"
                android:entries="@array/phone_options"
                android:gravity="center"
                />

            <TextView
                style="@style/DetailsLabelsText"
                android:id="@+id/email_label_edit_view"
                android:layout_below="@id/phone_edit"
                android:text="@string/email_label"
                />
            <EditText
                android:id="@+id/email_edit"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:layout_below="@id/email_label_edit_view"
                android:layout_marginBottom="16dp"
                android:inputType="textEmailAddress"
                android:gravity="center"
                android:hint="@string/email_hint"
                />
            <Spinner
                android:id="@+id/email_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_toRightOf="@id/email_edit"
                android:layout_below="@id/email_label_edit_view"
                android:entries="@array/email_type"
                android:gravity="center"
                />



            <TextView
                style="@style/DetailsLabelsText"
                android:id="@+id/address_label_edit_view"
                android:layout_below="@id/email_edit"
                android:text="@string/address_label"
                />
            <EditText
                android:id="@+id/address1_edit"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:layout_below="@id/address_label_edit_view"
                android:layout_marginBottom="16dp"
                android:inputType="textPostalAddress"
                android:gravity="center"
                android:hint="@string/address_line_1"
                />
            <Spinner
                android:id="@+id/address_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_toRightOf="@id/address1_edit"
                android:layout_below="@id/address_label_edit_view"
                android:entries="@array/address_type"
                android:gravity="center"
                />
            <EditText
                android:id="@+id/address2_edit"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:layout_below="@id/address1_edit"
                android:layout_marginBottom="16dp"
                android:inputType="textPostalAddress"
                android:gravity="center"
                android:hint="@string/address_line_2"
                />

            <EditText
                android:id="@+id/address_city_edit"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:layout_below="@id/address2_edit"
                android:layout_marginBottom="16dp"
                android:inputType="textPostalAddress"
                android:gravity="center"
                android:hint="@string/city_hint"
                />
            <Spinner
                android:id="@+id/state_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_toRightOf="@id/address_city_edit"
                android:layout_below="@id/address2_edit"
                android:entries="@array/states"
                android:gravity="center"
                />

            <EditText
                android:id="@+id/zip_code_edit"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:layout_below="@id/address_city_edit"
                android:layout_marginBottom="16dp"
                android:inputType="number"
                android:gravity="center"
                android:hint="@string/zip_hint"
                />


            <TextView
                style="@style/DetailsLabelsText"
                android:id="@+id/url_label_edit_view"
                android:layout_below="@id/zip_code_edit"
                android:text="@string/url_label"
                />
            <EditText
                android:id="@+id/url_edit"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:layout_below="@id/url_label_edit_view"
                android:layout_marginBottom="16dp"
                android:inputType="textUri"
                android:gravity="center"
                android:hint="@string/url_hint"
                />
            <Spinner
                android:id="@+id/url_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_toRightOf="@id/url_edit"
                android:layout_below="@id/url_label_edit_view"
                android:entries="@array/url_type"
                android:gravity="center"
                />


            <TextView
                style="@style/DetailsLabelsText"
                android:id="@+id/im_label_edit_view"
                android:layout_below="@id/url_edit"
                android:text="@string/im_label"
                />
            <EditText
                android:id="@+id/im_edit"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:layout_below="@id/im_label_edit_view"
                android:layout_marginBottom="16dp"
                android:inputType="text"
                android:gravity="center"
                android:hint="@string/im_hint"
                />
            <Spinner
                android:id="@+id/im_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_toRightOf="@id/im_edit"
                android:layout_below="@id/im_label_edit_view"
                android:entries="@array/im_type"
                android:gravity="center"
                />


            <TextView
                style="@style/DetailsLabelsText"
                android:id="@+id/dob_label_edit_view"
                android:layout_below="@id/im_edit"
                android:text="@string/dob_label"
                />
            <EditText
                android:id="@+id/dob_edit"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:layout_below="@id/dob_label_edit_view"
                android:layout_marginBottom="16dp"
                android:inputType="date"
                android:gravity="center"
                android:hint="@string/dob_hint"
                />


            <TextView
                style="@style/DetailsLabelsText"
                android:id="@+id/groups_label_edit_view"
                android:layout_below="@id/dob_edit"
                android:text="@string/groups_label"
                />
            <EditText
                android:id="@+id/groups_edit"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:layout_below="@id/groups_label_edit_view"
                android:layout_marginBottom="16dp"
                android:inputType="text"
                android:gravity="center"
                android:hint="@string/groups_hint"
                />


            <TextView
                style="@style/DetailsLabelsText"
                android:id="@+id/ringtone_label_edit_view"
                android:layout_below="@id/groups_edit"
                android:text="@string/ringtone_label"
                />
            <Spinner
                android:id="@+id/ringtone_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_below="@id/ringtone_label_edit_view"
                android:entries="@array/ringtone_type"
                android:gravity="center"
                />

        </RelativeLayout>
    </ScrollView>



</RelativeLayout>
